added main.js and populated main page dynamically

--- a/views/index.html
+++ b/views/index.html
@@ -142,13 +142,14 @@
       </div>
     </section>
 
+    <!-- RECIPE CARDS SECTION -->
     <div class="album py-5 bg-light">
       <div class="container">
+        <div id="recipe" class="row">
 
-        <div class="row">
+          <!-- RECIPE CARD--->
 
-          <!-- RECIPE CARD -->
-          <div class="col-md-3">
+          <!-- <div class="col-md-3">
             <div class="card mb-4 shadow-sm">
               <img class="bd-placeholder-img card-img-top" width="100%" height="225"
                 src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--458510_12.jpg?itok=EF_1bnMj"></img>
@@ -156,172 +157,18 @@
                 <p class="card-text">Creamy mushroom soup</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <small class="text-muted">350 Cal/ 50 mins</small>
-
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> 
                   </div>
-
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="card mb-4 shadow-sm">
-              <img class="bd-placeholder-img card-img-top" width="100%" height="225"
-                src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--458510_12.jpg?itok=EF_1bnMj"></img>
-              <div class="card-body">
-                <p class="card-text">Creamy mushroom soup</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <small class="text-muted">350 Cal/ 50 mins</small>
-
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
-                  </div>
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="card mb-4 shadow-sm">
-              <img class="bd-placeholder-img card-img-top" width="100%" height="225"
-                src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--458510_12.jpg?itok=EF_1bnMj"></img>
-              <div class="card-body">
-                <p class="card-text">Creamy mushroom soup</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <small class="text-muted">350 Cal/ 50 mins</small>
-
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
-                  </div>
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="card mb-4 shadow-sm">
-              <img class="bd-placeholder-img card-img-top" width="100%" height="225"
-                src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--458510_12.jpg?itok=EF_1bnMj"></img>
-              <div class="card-body">
-                <p class="card-text">Creamy mushroom soup</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <small class="text-muted">350 Cal/ 50 mins</small>
-
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
-                  </div>
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="card mb-4 shadow-sm">
-              <img class="bd-placeholder-img card-img-top" width="100%" height="225"
-                src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--458510_12.jpg?itok=EF_1bnMj"></img>
-              <div class="card-body">
-                <p class="card-text">Creamy mushroom soup</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <small class="text-muted">350 Cal/ 50 mins</small>
-
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
-                  </div>
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="card mb-4 shadow-sm">
-              <img class="bd-placeholder-img card-img-top" width="100%" height="225"
-                src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--458510_12.jpg?itok=EF_1bnMj"></img>
-              <div class="card-body">
-                <p class="card-text">Creamy mushroom soup</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <small class="text-muted">350 Cal/ 50 mins</small>
-
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
-                  </div>
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="card mb-4 shadow-sm">
-              <img class="bd-placeholder-img card-img-top" width="100%" height="225"
-                src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--458510_12.jpg?itok=EF_1bnMj"></img>
-              <div class="card-body">
-                <p class="card-text">Creamy mushroom soup</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <small class="text-muted">350 Cal/ 50 mins</small>
-
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
-                  </div>
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3">
-            <div class="card mb-4 shadow-sm">
-              <img class="bd-placeholder-img card-img-top" width="100%" height="225"
-                src="https://www.bbcgoodfood.com/sites/default/files/styles/recipe/public/recipe_images/recipe-image-legacy-id--458510_12.jpg?itok=EF_1bnMj"></img>
-              <div class="card-body">
-                <p class="card-text">Creamy mushroom soup</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <small class="text-muted">350 Cal/ 50 mins</small>
-
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
-                  </div>
-
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-          <!-- <div class="col-md-4">
-              <div class="card mb-4 shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-                <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                    </div>
-                    <small class="text-muted">9 mins</small>
-                  </div>
-                </div>
-              </div>
-            </div> -->
-
+          </div>  -->
 
         </div>
       </div>
     </div>
-
   </main>
 
   <footer>
