--- a/views/recipe/showRecipe.html
+++ b/views/recipe/showRecipe.html
@@ -32,7 +32,7 @@
                             <a href="#" class="text-white">Profile</a>
                         </h4>
                         <ul class="list-unstyled">
-                            <li class="nav-item nav justify-content-end"><a href="#" class="text-white">Breakfast</a>
+                            <li class="nav-item nav justify-content-end"><a href="" class="text-white">Breakfast</a>
                             </li>
                             <li class="nav-item nav justify-content-end"><a href="#" class="text-white">Lunch</a></li>
                             <li class="nav-item nav justify-content-end"><a href="#" class="text-white">Dinner</a></li>
