--- a/views/index.html
+++ b/views/index.html
@@ -24,22 +24,25 @@
   <!-- NAVIGATION MENU -->
   <header>
     <div class="bg-dark collapse" id="navbarHeader">
-        <div class="container">
-            <div class="row nav justify-content-end">
-                <div class="col-sm-4 py-4">
-                    <h4 class="text-white nav justify-content-end mb-3">Profile</h4>
-                    <ul class="list-unstyled">
-                        <li class="nav-item nav justify-content-end"><a href="#" class="text-white">Breakfast</a>
-                        </li>
-                        <li class="nav-item nav justify-content-end"><a href="#" class="text-white">Lunch</a></li>
-                        <li class="nav-item nav justify-content-end"><a href="#" class="text-white">Dinner</a></li>
-                        <li class="nav-item nav justify-content-end mt-2"><a href="#"
-                                class="text-white font-weight-bold">Log Out</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+      <div class="container">
+          <div class="row nav justify-content-end">
+              <div class="col-sm-4 py-4">
+                  <h4 class="text-white nav justify-content-end mb-3">
+                      <a href="/user/profile">Profile</a>
+                  </h4>
+                  <ul class="list-unstyled">
+                      <li class="nav-item nav justify-content-end"><a href="/breakfast" class="text-white">Breakfast</a>
+                      </li>
+                      <li class="nav-item nav justify-content-end"><a href="/lunch" class="text-white">Lunch</a></li>
+                      <li class="nav-item nav justify-content-end"><a href="/dinner" class="text-white">Dinner</a></li>
+                      <li class="nav-item nav justify-content-end"><a href="/dessert" class="text-white">Dessert</a></li>
+                      <li class="nav-item nav justify-content-end mt-2"><a href="#"
+                              class="text-white font-weight-bold">Log Out</a></li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </div>
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container d-flex justify-content-end">
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
@@ -172,20 +175,9 @@
   </main>
 
   <footer>
-    <p class="backTop" style="text-align: right;">
-      <a href="#" style="color: white;">Back to top</a>
-    </p>
-    <p class="copyright" style="text-align: left;">&copy; 2020 Pinrecipe</p>
+    <p class="backTop"><a href="#"> Back to top</a></p>
+    <p class="copyright">&copy; 2020 Pinrecipe</p>
   </footer>
-
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
-  <script src="/docs/4.4/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
-    crossorigin="anonymous"></script>
-
 
   <!-- BOOTSTRAP JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
