--- a/views/recipe/showRecipe.html
+++ b/views/recipe/showRecipe.html
@@ -29,13 +29,18 @@
                 <div class="row nav justify-content-end">
                     <div class="col-sm-4 py-4">
                         <h4 class="text-white nav justify-content-end mb-3">
-                            <a href="#" class="text-white">Profile</a>
+                            <a href="/">Main Page</a>
+                        </h4>
+
+                        <h4 class="text-white nav justify-content-end mb-3">
+                            <a href="/user/profile">Profile</a>
                         </h4>
                         <ul class="list-unstyled">
-                            <li class="nav-item nav justify-content-end"><a href="" class="text-white">Breakfast</a>
+                            <li class="nav-item nav justify-content-end"><a href="/breakfast" class="text-white">Breakfast</a>
                             </li>
-                            <li class="nav-item nav justify-content-end"><a href="#" class="text-white">Lunch</a></li>
-                            <li class="nav-item nav justify-content-end"><a href="#" class="text-white">Dinner</a></li>
+                            <li class="nav-item nav justify-content-end"><a href="/lunch" class="text-white">Lunch</a></li>
+                            <li class="nav-item nav justify-content-end"><a href="/dinner" class="text-white">Dinner</a></li>
+                            <li class="nav-item nav justify-content-end"><a href="/dessert" class="text-white">Dessert</a></li>
                             <li class="nav-item nav justify-content-end mt-2"><a href="#"
                                     class="text-white font-weight-bold">Log Out</a></li>
                         </ul>
