--- a/public/styles/user/logIn.css
+++ b/public/styles/user/logIn.css
@@ -18,9 +18,9 @@ main {
 }
 
 img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    /* border-radius: 50%; */
 }
  
 footer{
