--- a/views/user/logInPage.html
+++ b/views/user/logInPage.html
@@ -55,31 +55,32 @@
             </div>
         </div>
     </header>
-    
-    <div class="container">
-        <div class="row d-flex justify-content-center mt-5">
-            <form class="form-signin" data-bitwarden-watching="1">
-                <img class="mb-4" src="https://cdn.pixabay.com/photo/2017/06/23/02/32/pinterest-2433266_960_720.png"
-                    alt="" width="72" height="72">
-                <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-                <label for="inputEmail" class="sr-only">Email address</label>
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required=""
-                    autofocus="">
-                <label for="inputPassword" class="sr-only">Password</label>
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-                <div class="checkbox mb-3 mt-3">
-                    <label>
-                        <input type="checkbox" value="remember-me"> Remember me
-                    </label>
-                </div>
-                <button class="btn btn-lg btn-secondary btn-block" type="submit">Sign in</button>
-                <p class="mt-5 mb-3 text-muted">© 2020</p>
-            </form>
+    <main>
+        <div class="container">
+            <div class="row d-flex justify-content-center mt-5">
+                <form class="form-signin" data-bitwarden-watching="1">
+                    <img class="mb-4" src="https://cdn.pixabay.com/photo/2017/06/23/02/32/pinterest-2433266_960_720.png"
+                        alt="" width="72" height="72">
+                    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+                    <label for="inputEmail" class="sr-only">Email address</label>
+                    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required=""
+                        autofocus="">
+                    <label for="inputPassword" class="sr-only">Password</label>
+                    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+                    <div class="checkbox mb-3 mt-3">
+                        <label>
+                            <input type="checkbox" value="remember-me"> Remember me
+                        </label>
+                    </div>
+                    <button class="btn btn-lg btn-secondary btn-block" type="submit">Sign in</button>
+                    <p class="mt-5 mb-3 text-muted">© 2020</p>
+                </form>
+            </div>
         </div>
-    </div>
+
+    </main>
 
     <footer>
-        <p class="backTop"><a href="#"> Back to top</a></p>
         <p class="copyright">&copy; 2020 Pinrecipe</p>
     </footer>
 
