--- a/views/user/logInPage.html
+++ b/views/user/logInPage.html
@@ -59,7 +59,7 @@
         <div class="container">
             <div class="row d-flex justify-content-center mt-5">
                 <form class="form-signin" data-bitwarden-watching="1">
-                    <img class="mb-4" src="https://cdn.pixabay.com/photo/2017/06/23/02/32/pinterest-2433266_960_720.png"
+                    <img class="mb-4" src="/images/pinrecipe.png"
                         alt="" width="72" height="72">
                     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
                     <label for="inputEmail" class="sr-only">Email address</label>
@@ -73,7 +73,6 @@
                         </label>
                     </div>
                     <button class="btn btn-lg btn-secondary btn-block" type="submit">Sign in</button>
-                    <p class="mt-5 mb-3 text-muted">© 2020</p>
                 </form>
             </div>
         </div>
