--- a/views/user/logInPage.html
+++ b/views/user/logInPage.html
@@ -11,6 +11,7 @@
 
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="/styles/user/logIn.css">
+    <script defer src="/scripts/user/userLogIn.js"></script>
     <title>Pinrecipe Login</title>
 </head>
 
@@ -24,9 +25,9 @@
                             <a href="/">Main Page</a>
                         </h4>
 
-                        <h4 class="text-white nav justify-content-end mb-3">
+                        <!-- <h4 class="text-white nav justify-content-end mb-3">
                             <a href="/user/profile">Profile</a>
-                        </h4>
+                        </h4> -->
                         <ul class="list-unstyled">
                             <li class="nav-item nav justify-content-end"><a href="/breakfast"
                                     class="text-white">Breakfast</a>
