Connect js file to the user profile page

--- a/views/user/userProfile.html
+++ b/views/user/userProfile.html
@@ -11,6 +11,10 @@
 
     <!-- MY CSS -->
     <link rel="stylesheet" href="/styles/user/userProfile.css">
+
+    <!-- MY JS -->
+    <script defer src="/scripts/user/userProfile.js"></script>
+
     <title>User Profile</title>
 </head>
 
