--- a/views/user/logInPage.html
+++ b/views/user/logInPage.html
@@ -1,98 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- BOOTSTRAP CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <!-- BOOTSTRAP CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="/styles/user/logIn.css">
-    <script defer src="/scripts/user/userLogIn.js"></script>
-    <title>Pinrecipe Login</title>
-</head>
+        <!-- CUSTOM CSS -->
+        <link rel="stylesheet" href="/styles/user/logIn.css">
 
-<body class="text-center">
-    <header>
-        <div class="bg-dark collapse" id="navbarHeader">
-            <div class="container">
-                <div class="row nav justify-content-end">
-                    <div class="col-sm-4 py-4">
-                        <h4 class="text-white nav justify-content-end mb-3">
-                            <a href="/">Main Page</a>
-                        </h4>
+        <!-- CUSTOM JS -->
+        <script defer src="/scripts/user/userLogIn.js"></script>
+        <title>Pinrecipe Login</title>
+    </head>
 
-                        <!-- <h4 class="text-white nav justify-content-end mb-3">
-                            <a href="/user/profile">Profile</a>
-                        </h4> -->
-                        <ul class="list-unstyled">
-                            <li class="nav-item nav justify-content-end"><a href="/breakfast"
-                                    class="text-white">Breakfast</a>
-                            </li>
-                            <li class="nav-item nav justify-content-end"><a href="/lunch" class="text-white">Lunch</a>
-                            </li>
-                            <li class="nav-item nav justify-content-end"><a href="/dinner" class="text-white">Dinner</a>
-                            </li>
-                            <li class="nav-item nav justify-content-end"><a href="/dessert"
-                                    class="text-white">Dessert</a>
-                            </li>
-                            <li class="nav-item nav justify-content-end mt-2"><a href="#"
-                                    class="text-white font-weight-bold">Log Out</a></li>
-                        </ul>
+    <body class="text-center">
+        <!-- NAVBAR -->
+        <header>
+            <div class="bg-dark collapse" id="navbarHeader">
+                <div class="container">
+                    <div class="row nav justify-content-end">
+                        <div class="col-sm-4 py-4">
+                            <h4 class="text-white nav justify-content-end mb-3">
+                                <a href="/">Main Page</a>
+                            </h4>
+                            <h4 class="text-white nav justify-content-end mb-3">
+                                <a href="/register">Create Account</a>
+                            </h4>
+                <!-- NAV LIST FOR USER IF LOGGED IN -->
+                            <!-- <h4 class="text-white nav justify-content-end mb-3">
+                                <a href="/user/profile">Profile</a>
+                            </h4> -->
+                            <!-- <ul class="list-unstyled">
+                                <li class="nav-item nav justify-content-end"><a href="/breakfast"
+                                        class="text-white">Breakfast</a>
+                                </li>
+                                <li class="nav-item nav justify-content-end"><a href="/lunch" class="text-white">Lunch</a>
+                                </li>
+                                <li class="nav-item nav justify-content-end"><a href="/dinner" class="text-white">Dinner</a>
+                                </li>
+                                <li class="nav-item nav justify-content-end"><a href="/dessert"
+                                        class="text-white">Dessert</a>
+                                </li>
+                                <li class="nav-item nav justify-content-end mt-2"><a href="#"
+                                        class="text-white font-weight-bold">Log Out</a></li>
+                            </ul> -->
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="navbar navbar-dark bg-dark shadow-sm">
-            <div class="container d-flex justify-content-end">
-                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
-                    data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+            <div class="navbar navbar-dark bg-dark shadow-sm">
+                <div class="container d-flex justify-content-end">
+                    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                        data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
             </div>
-        </div>
-    </header>
-    <main>
-        <div class="container">
-            <div class="row d-flex justify-content-center mt-5">
-                <form class="form-signin" data-bitwarden-watching="1">
-                    <img class="mb-4" src="/images/pinrecipe.png"
-                        alt="" width="72" height="72">
-                    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-                    <label for="inputEmail" class="sr-only">Email address</label>
-                    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required=""
-                        autofocus="">
-                    <label for="inputPassword" class="sr-only">Password</label>
-                    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
-                    <div class="checkbox mb-3 mt-3">
-                        <label>
-                            <input type="checkbox" value="remember-me"> Remember me
-                        </label>
-                    </div>
-                    <button class="btn btn-lg btn-secondary btn-block" type="submit">Sign in</button>
-                </form>
+        </header>
+
+        <!-- MAIN SECTION WITH FORM-->
+        <main>
+            <div class="container">
+                <div class="row d-flex justify-content-center mt-5">
+                    <form class="form-signin" data-bitwarden-watching="1">
+                        <img class="mb-4" src="/images/pinrecipe.png"
+                            alt="" width="72" height="72">
+                        <h1 class="h3 mb-3 font-weight-normal">Please log in</h1>
+
+                        <!-- EMAIL -->
+                        <label for="inputEmail" class="sr-only">Email address</label>
+                        <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required=""
+                            autofocus="">
+
+                        <!-- PASSWORD -->
+                        <label for="inputPassword" class="sr-only">Password</label>
+                        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+                        <div class="checkbox mb-3 mt-3">
+                            <label>
+                                <input type="checkbox" value="remember-me"> Remember me
+                            </label>
+                        </div>
+
+                        <!-- BUTTON -->
+                        <button class="btn btn-lg btn-secondary btn-block" type="submit">Log in</button>
+                    </form>
+                </div>
             </div>
-        </div>
+        </main>
 
-    </main>
+        <!-- FOOTER -->
+        <footer>
+            <p class="copyright">&copy; 2020 Pinrecipe</p>
+        </footer>
 
-    <footer>
-        <p class="copyright">&copy; 2020 Pinrecipe</p>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
-</body>
+        <!-- BOOTSTRAP JS -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
+    </body>
 
 </html>
