--- a/views/recipe/showRecipe.html
+++ b/views/recipe/showRecipe.html
@@ -28,14 +28,24 @@
             <div class="container">
                 <div class="row nav justify-content-end">
                     <div class="col-sm-4 py-4">
+
+                        <!-- LINK TO MAIN PAGE -->
                         <h4 class="text-white nav justify-content-end mb-3">
                             <a href="/">Main Page</a>
                         </h4>
 
+                        <!-- LINK TO LOG IN -->
                         <h4 class="text-white nav justify-content-end mb-3">
-                            <a href="/user/profile">Profile</a>
+                            <a href="/login" id="login">Login</a>
                         </h4>
-                        <ul class="list-unstyled">
+
+                        <!-- LINK TO REGISTER -->
+                        <h4 class="text-white nav justify-content-end mb-3">
+                          <a href="/register" id="register">Create Account</a>
+                        </h4>
+
+                    <!-- NAV FOR USER IF LOGGED IN -->
+                        <!-- <ul class="list-unstyled">
                             <li class="nav-item nav justify-content-end"><a href="/breakfast" class="text-white">Breakfast</a>
                             </li>
                             <li class="nav-item nav justify-content-end"><a href="/lunch" class="text-white">Lunch</a></li>
@@ -43,7 +53,7 @@
                             <li class="nav-item nav justify-content-end"><a href="/dessert" class="text-white">Dessert</a></li>
                             <li class="nav-item nav justify-content-end mt-2"><a href="#"
                                     class="text-white font-weight-bold">Log Out</a></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
@@ -65,6 +75,8 @@
             <div class="row">
                 <div class="col-md-6 mt-5">
                     <div class="card">
+                        
+                        <!-- PHOTO -->
                         <img src="" id="photo" class="card-img-top" alt="...">
 
                         <!-- DETAILS PLACEHOLDER-->
