--- a/views/recipe/dessert.html
+++ b/views/recipe/dessert.html
@@ -14,7 +14,6 @@
 
     <!-- CONNECT MAIN JS FILE -->
     <script defer src="/scripts/recipes/dessert.js"></script>
-
 </head>
 
 <body>
@@ -37,7 +36,7 @@
                             <li class="nav-item nav justify-content-end"><a href="/lunch" class="text-white">Lunch</a></li>
                             <li class="nav-item nav justify-content-end"><a href="/dinner" class="text-white">Dinner</a></li>
                             <li class="nav-item nav justify-content-end"><a href="/dessert" class="text-white">Dessert</a></li>
-                            <li class="nav-item nav justify-content-end mt-2"><a href="#"
+                            <li class="nav-item nav justify-content-end mt-2"><a href="/login"
                                     class="text-white font-weight-bold">Log Out</a></li>
                         </ul>
                     </div>
