--- a/views/index.html
+++ b/views/index.html
@@ -28,9 +28,12 @@
           <div class="row nav justify-content-end">
               <div class="col-sm-4 py-4">
                   <h4 class="text-white nav justify-content-end mb-3">
-                      <a href="/user/profile">Profile</a>
+                      <a href="/login" id="login">Login</a>
                   </h4>
-                  <ul class="list-unstyled">
+                  <h4 class="text-white nav justify-content-end mb-3">
+                    <a href="/register" id="register">Create Account</a>
+                  </h4>
+                  <!-- <ul class="list-unstyled">
                       <li class="nav-item nav justify-content-end"><a href="/breakfast" class="text-white">Breakfast</a>
                       </li>
                       <li class="nav-item nav justify-content-end"><a href="/lunch" class="text-white">Lunch</a></li>
@@ -38,7 +41,7 @@
                       <li class="nav-item nav justify-content-end"><a href="/dessert" class="text-white">Dessert</a></li>
                       <li class="nav-item nav justify-content-end mt-2"><a href="#"
                               class="text-white font-weight-bold">Log Out</a></li>
-                  </ul>
+                  </ul> -->
               </div>
           </div>
       </div>
