--- a/views/recipe/showRecipe.html
+++ b/views/recipe/showRecipe.html
@@ -28,32 +28,44 @@
             <div class="container">
                 <div class="row nav justify-content-end">
                     <div class="col-sm-4 py-4">
+                        <div id="unauthorized">
+                            <h4 class="text-white nav justify-content-end mb-3">
+                                <a href="/">Main Page</a>
+                            </h4>
 
-                        <!-- LINK TO MAIN PAGE -->
-                        <h4 class="text-white nav justify-content-end mb-3">
-                            <a href="/">Main Page</a>
-                        </h4>
+                            <!-- LINK TO LOG IN -->
+                            <h4 class="text-white nav justify-content-end mb-3">
+                                <a href="/login" id="login">Login</a>
+                            </h4>
 
-                        <!-- LINK TO LOG IN -->
-                        <h4 class="text-white nav justify-content-end mb-3">
-                            <a href="/login" id="login">Login</a>
-                        </h4>
+                            <!-- LINK TO REGISTER -->
+                            <h4 class="text-white nav justify-content-end mb-3">
+                                <a href="/register" id="register">Create Account</a>
+                            </h4>
+                        </div>
 
-                        <!-- LINK TO REGISTER -->
-                        <h4 class="text-white nav justify-content-end mb-3">
-                          <a href="/register" id="register">Create Account</a>
-                        </h4>
-
-                    <!-- NAV FOR USER IF LOGGED IN -->
-                        <!-- <ul class="list-unstyled">
-                            <li class="nav-item nav justify-content-end"><a href="/breakfast" class="text-white">Breakfast</a>
-                            </li>
-                            <li class="nav-item nav justify-content-end"><a href="/lunch" class="text-white">Lunch</a></li>
-                            <li class="nav-item nav justify-content-end"><a href="/dinner" class="text-white">Dinner</a></li>
-                            <li class="nav-item nav justify-content-end"><a href="/dessert" class="text-white">Dessert</a></li>
-                            <li class="nav-item nav justify-content-end mt-2"><a href="#"
-                                    class="text-white font-weight-bold">Log Out</a></li>
-                        </ul> -->
+                        <!-- AUTHORIZED USER -->
+                        <div>
+                            <h4 class="text-white nav justify-content-end mb-3">
+                                <a href="/">Main Page</a>
+                            </h4>
+                            <h4 class="text-white nav justify-content-end mb-3">
+                                <a href="user/profile">Profile</a>
+                            </h4>
+                            <ul class="list-unstyled">
+                                <li class="nav-item nav justify-content-end"><a href="/breakfast"
+                                        class="text-white">Breakfast</a>
+                                </li>
+                                <li class="nav-item nav justify-content-end"><a href="/lunch"
+                                        class="text-white">Lunch</a></li>
+                                <li class="nav-item nav justify-content-end"><a href="/dinner"
+                                        class="text-white">Dinner</a></li>
+                                <li class="nav-item nav justify-content-end"><a href="/dessert"
+                                        class="text-white">Dessert</a></li>
+                                <li class="nav-item nav justify-content-end mt-2"><a href="/login"
+                                        class="text-white font-weight-bold">Log Out</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -75,7 +87,7 @@
             <div class="row">
                 <div class="col-md-6 mt-5">
                     <div class="card">
-                        
+
                         <!-- PHOTO -->
                         <img src="" id="photo" class="card-img-top" alt="...">
 
@@ -158,7 +170,8 @@
                                                 <div class="form-group">
                                                     <label for="message-text" class="col-form-label">Message:</label>
                                                     <textarea class="form-control" id="update-review-text"></textarea>
-                                                    <input type="hidden" id="update-review-modal-review-id" name="reviewId" value=""> 
+                                                    <input type="hidden" id="update-review-modal-review-id"
+                                                        name="reviewId" value="">
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary"
