--- a/views/recipe/showRecipe.html
+++ b/views/recipe/showRecipe.html
@@ -50,7 +50,7 @@
                                 <a href="/">Main Page</a>
                             </h4>
                             <h4 class="text-white nav justify-content-end mb-3">
-                                <a href="user/profile">Profile</a>
+                                <a href="/user/profile">Profile</a>
                             </h4>
                             <ul class="list-unstyled">
                                 <li class="nav-item nav justify-content-end"><a href="/breakfast"
