--- a/views/user/logInPage.html
+++ b/views/user/logInPage.html
@@ -30,24 +30,6 @@
                             <h4 class="text-white nav justify-content-end mb-3">
                                 <a href="/register">Create Account</a>
                             </h4>
-                <!-- NAV LIST FOR USER IF LOGGED IN -->
-                            <!-- <h4 class="text-white nav justify-content-end mb-3">
-                                <a href="/user/profile">Profile</a>
-                            </h4> -->
-                            <!-- <ul class="list-unstyled">
-                                <li class="nav-item nav justify-content-end"><a href="/breakfast"
-                                        class="text-white">Breakfast</a>
-                                </li>
-                                <li class="nav-item nav justify-content-end"><a href="/lunch" class="text-white">Lunch</a>
-                                </li>
-                                <li class="nav-item nav justify-content-end"><a href="/dinner" class="text-white">Dinner</a>
-                                </li>
-                                <li class="nav-item nav justify-content-end"><a href="/dessert"
-                                        class="text-white">Dessert</a>
-                                </li>
-                                <li class="nav-item nav justify-content-end mt-2"><a href="#"
-                                        class="text-white font-weight-bold">Log Out</a></li>
-                            </ul> -->
                         </div>
                     </div>
                 </div>
@@ -67,7 +49,7 @@
         <main>
             <div class="container">
                 <div class="row d-flex justify-content-center mt-5">
-                    <form class="form-signin" data-bitwarden-watching="1">
+                    <form class="form-signin" data-bitwarden-watching="1" id="login-form">
                         <img class="mb-4" src="/images/pinrecipe.png"
                             alt="" width="72" height="72">
                         <h1 class="h3 mb-3 font-weight-normal">Please log in</h1>
