--- a/views/user/registerPage.html
+++ b/views/user/registerPage.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="/styles/user/logIn.css">
 
         <!-- CUSTOM JS -->
-        <script defer src="/scripts/user/userLogIn.js"></script>
+        <script defer src="/scripts/user/userRegister.js"></script>
         <title>Pinrecipe Login</title>
     </head>
 
@@ -68,8 +68,8 @@
         <!-- MAIN WITH FORM -->
         <main>
             <div class="container">
-                <div class="row d-flex justify-content-center mt-5">
-                    <form class="form-signin" data-bitwarden-watching="1">
+                <div class="register-form row d-flex justify-content-center mt-5">
+                    <form id="registerForm" class="form-signin" data-bitwarden-watching="1">
                         <img class="mb-4" src="/images/pinrecipe.png" alt="" width="72" height="72">
                         <h1 class="h3 mb-3 font-weight-normal">Please create your account</h1>
 
@@ -92,11 +92,11 @@
                         <label for="inputPassword" class="sr-only">Password</label>
                         <input type="password" name="password" id="inputPassword" class="form-control"
                             placeholder="Password" required="">
-                        <div class="checkbox mb-3 mt-3">
+                        <!-- <div class="checkbox mb-3 mt-3">
                             <label>
                                 <input type="checkbox" value="remember-me"> Remember me
                             </label>
-                        </div>
+                        </div> -->
 
                         <!-- BUTTON -->
                         <button class="btn btn-lg btn-secondary btn-block" type="submit">Create Account</button>
