--- a/views/user/userProfile.html
+++ b/views/user/userProfile.html
@@ -53,16 +53,17 @@
 
         <!-- USER PROFILE FORM -->
         <main>
-            <div class="container">
+            <div id="userProfile" class="container">
                 <div class="py-5 text-center">
                     <img class="d-block mx-auto mb-4" src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909_960_720.png" alt="">
                     <h2>User Profile</h2>
                 </div>
-
+    
+    
                 <div class="row">
                     <div class="col-md-12">
-                        <form>
-                            <div class="row">
+                        <form id="profileForm">
+                            <div class="form-row">
                                 <div class="col-md-6 mb-3">
 
                                     <!-- FIRST NAME -->
@@ -83,13 +84,13 @@
                                 <input type="email" class="form-control" id="email" placeholder="Email">
                             </div>
                         </form>
-                    </div>
 
-                    <div class="col text-center">
-                        <!-- UPDATE -->
-                        <button class="btn btn-secondary">Update</button>
-                        <!-- DELETE -->
-                        <button class="btn btn-danger">Delete Profile</button>
+                        <div class="col text-center">
+                            <!-- UPDATE -->
+                            <button id="updateProfile" class="btn btn-secondary">Update</button>
+                            <!-- DELETE -->
+                            <button id="deleteProfile" class="btn btn-danger">Delete Profile</button>
+                        </div>
                     </div>
                 </div>
             </div>
