--- a/views/user/userProfile.html
+++ b/views/user/userProfile.html
@@ -96,6 +96,23 @@
             </div>
         </main>
 
+        <!-- MODAL DELETE MESSAGE -->
+        <div id="deleteUserMsg" class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <p class="modal-title">Your profile has been successfuly deleted.</p>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-footer">
+                  <button id="modalClose" type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
         <!-- FOOTER -->
         <footer>
             <p class="copyright">&copy; 2020 Pinrecipe</p>
